# typing_ds

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  MANIFEST.in  Makefile  README.md  index.html  keylogger.yaml  main.spec  mkdocs.yml  package-lock.json  package.json  path.txt  pyproject.toml  requirements.txt  sample.yaml  setup.py  tsconfig.json
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
.github/: rename_project.sh
gui/: typing_data.ui
nim_src/: typing_ds.nimble
nim_src/src/: fileLogger.nim  keyLogger.nim  typing_ds.nim
py/: app_settings.py  default_keyboard_data.py  file_manager.py  gui_hooks.py  install_setup.py  key_press.py  keyboard_view.py  keylogs.py  log_path.py  main.py  test_data.py  test_runner.py  tests.py  window_gui.py
py_src/: data.json  pyproject.toml
py_src/src/: keylogger.py  logger.py  main.py
src/: App.tsx  fileSaver.rs  file_saver.rs  index.css  keyMonitor.rs  key_monitor.rs  letter_manager.rs  lib.rs  main.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_saver.rs  letter_manager.rs  logger.rs  main.rs
src/components/button/: index.tsx
src/components/layout/: index.tsx
src/logic/: keyboards.ts  methodius.ts  programSettings.ts  reportManager.ts  settings.ts  tests.ts  utterance.ts  wordInfo.ts
src/views/keyboardView/: index.tsx
src/views/report/: index.tsx
src/views/settings/: index.tsx
tests/: test_base.py
typing_ds/: __main__.py  base.py  cli.py
