[package]
name = "typing_ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "typing_ds"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
device_query = "1.1.3"
